# poten-gateway-python

./: .gitignore  Dockerfile  README.md  docker.compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: main.py
app/api/v1/: gateway.py
app/core/: config.py
app/routes/: gateway.py
app/service/: auth.py
